--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Meeting Tools v2.10.2</title>
+    <title>Meeting Tools v2.10.3</title>
     <link rel="manifest" href="manifest.json">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
@@ -250,7 +250,7 @@
         </div>
     </div>
 
-    <!-- ===================== TRANSCRIPT LIST SCREEN (NEW v2.10.2) ===================== -->
+    <!-- ===================== TRANSCRIPT LIST SCREEN (NEW v2.10.3) ===================== -->
     <div id="transcriptList" class="screen">
         <div class="header"><h1>Transcripts</h1><div class="subtitle">Saved this meeting</div></div>
         <div class="container">
@@ -259,7 +259,7 @@
         <div class="button-row"><button class="footer-btn secondary-btn" onclick="showScreen('menu')">Back</button></div>
     </div>
 
-    <!-- ===================== TRANSCRIPT VIEW SCREEN (NEW v2.10.2) ===================== -->
+    <!-- ===================== TRANSCRIPT VIEW SCREEN (NEW v2.10.3) ===================== -->
     <div id="transcriptView" class="screen">
         <div class="header">
             <h1 id="transcriptViewName">Name</h1>
@@ -271,8 +271,6 @@
         </div>
         <div class="button-row">
             <button class="footer-btn secondary-btn" onclick="showScreen('transcriptList')">Back</button>
-            <button class="footer-btn secondary-btn" onclick="printTranscript()">Print / PDF</button>
-            <button class="footer-btn secondary-btn" onclick="shareRichTranscript()">Rich Text</button>
             <button class="footer-btn" style="background:var(--green);" onclick="shareTranscript()">Share</button>
         </div>
     </div>
@@ -302,7 +300,7 @@
             document.getElementById('mdToggle').checked = (mdSaved === 'true');
             document.getElementById('openaiKey').value = localStorage.getItem(KEY_AI_KEY) || "";
             const vLabel = document.getElementById('versionLabel');
-            vLabel.innerText = "Version 2.10.2" + (window.location.pathname.toLowerCase().includes('/test/') ? " (TEST)" : "");
+            vLabel.innerText = "Version 2.10.3" + (window.location.pathname.toLowerCase().includes('/test/') ? " (TEST)" : "");
             refreshRoster();
             nextWod();
         }
@@ -667,7 +665,7 @@
         }
 
         /* ============================================================
-           NEW: TRANSCRIPT LIST & VIEW FUNCTIONS (v2.10.2)
+           NEW: TRANSCRIPT LIST & VIEW FUNCTIONS (v2.10.3)
         ============================================================ */
 
         let activeTranscriptIndex = -1;
@@ -706,66 +704,32 @@
             showScreen('transcriptView');
         }
 
-        function printTranscript() {
-            const transcripts = JSON.parse(localStorage.getItem(KEY_TRANSCRIPTS) || '[]');
-            const t = transcripts[activeTranscriptIndex];
-            if (!t) return;
-            const html = [
-                '<!DOCTYPE html><html><head><meta charset="UTF-8">',
-                '<title>' + t.speaker + ' — Transcript</title>',
-                '<style>',
-                'body { font-family: -apple-system, Georgia, serif; padding: 40px; max-width: 720px; margin: 0 auto; color: #000; font-size: 15px; line-height: 1.9; }',
-                'h1 { font-size: 24px; margin-bottom: 4px; }',
-                '.meta { color: #555; font-size: 13px; margin-bottom: 6px; }',
-                '.summary { background: #f5f5f5; border-left: 4px solid #ccc; padding: 10px 14px; border-radius: 4px; margin-bottom: 24px; font-size: 13px; font-family: monospace; }',
-                'hr { border: none; border-top: 1px solid #ddd; margin: 20px 0; }',
-                '.transcript { font-size: 16px; }',
-                '.highlight-filler { background: #FFD0CE; border-bottom: 2px solid #FF3B30; color: #CC0000; font-weight: 700; border-radius: 3px; padding: 0 3px; -webkit-print-color-adjust: exact; print-color-adjust: exact; }',
-                '.highlight-wod { background: #FFF3C4; border-bottom: 2px solid #BF941A; color: #7A5C00; font-weight: 700; border-radius: 3px; padding: 0 3px; -webkit-print-color-adjust: exact; print-color-adjust: exact; }',
-                '.legend { display: flex; gap: 20px; margin-bottom: 20px; font-size: 12px; font-weight: 700; }',
-                '.dot { display: inline-block; width: 10px; height: 10px; border-radius: 50%; margin-right: 5px; -webkit-print-color-adjust: exact; print-color-adjust: exact; }',
-                '@media print { body { padding: 20px; } }',
-                '</style></head><body>',
-                '<h1>' + t.speaker + '</h1>',
-                '<div class="meta">' + t.role + ' &nbsp;·&nbsp; ' + t.date + '</div>',
-                '<div class="summary"><strong>Filler Summary:</strong> ' + t.fillerSummary + '</div>',
-                '<div class="legend"><span><span class="dot" style="background:#FF3B30;"></span>Filler Word</span><span><span class="dot" style="background:#BF941A;"></span>Word of the Day</span></div>',
-                '<hr>',
-                '<div class="transcript">' + t.highlightedHTML + '</div>',
-                '</body></html>'
-            ].join('\n');
-            const blob = new Blob([html], { type: 'text/html' });
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.target = '_blank';
-            a.click();
-            setTimeout(() => URL.revokeObjectURL(url), 10000);
-        }
 
         function shareTranscript() {
             const transcripts = JSON.parse(localStorage.getItem(KEY_TRANSCRIPTS) || '[]');
             const t = transcripts[activeTranscriptIndex];
             if (!t) return;
-            const text = 'Transcript — ' + t.speaker + ' (' + t.role + ')\n' + t.date + '\n\nFiller Summary: ' + t.fillerSummary + '\n\n' + t.plainText;
-            if (navigator.share) {
-                navigator.share({ title: t.speaker + ' Transcript', text });
+            const isMd = localStorage.getItem(KEY_MD) === 'true';
+            let body;
+            if (isMd) {
+                // Full markdown: header, filler summary as blockquote, fillers as **BOLD**
+                const mdText = t.plainText.replace(new RegExp('\\b(' + fillerList.filter(f => f !== 'WORD OF DAY').join('|') + ')\\b', 'gi'), (m) => '**' + m.toUpperCase() + '**');
+                body = '# ' + t.speaker + ' — Transcript\n' +
+                       '**' + t.role + '** · ' + t.date + '\n\n' +
+                       '> **Filler Summary:** ' + t.fillerSummary + '\n\n' +
+                       '---\n\n' + mdText;
             } else {
-                navigator.clipboard.writeText(text).then(() => openModal("Copied", "Transcript copied to clipboard.", () => {}));
+                // Plain text with ** around fillers only
+                const markedText = t.plainText.replace(new RegExp('\\b(' + fillerList.filter(f => f !== 'WORD OF DAY').join('|') + ')\\b', 'gi'), (m) => '**' + m.toUpperCase() + '**');
+                body = 'Transcript — ' + t.speaker + ' (' + t.role + ')\n' +
+                       t.date + '\n\n' +
+                       'Filler Summary: ' + t.fillerSummary + '\n\n' +
+                       markedText;
             }
-        }
-
-        function shareRichTranscript() {
-            const transcripts = JSON.parse(localStorage.getItem(KEY_TRANSCRIPTS) || '[]');
-            const t = transcripts[activeTranscriptIndex];
-            if (!t) return;
-            // Replace highlighted spans with **WORD** (bold caps) for rich text / markdown
-            const richText = t.plainText.replace(/\b(AH|UH|UM|ER|SO|LIKE|YOU KNOW)/gi, (match) => '**' + match.toUpperCase() + '**');
-            const fullText = 'Transcript — ' + t.speaker + ' (' + t.role + ')\n' + t.date + '\n\nFiller Summary: ' + t.fillerSummary + '\n\n' + richText;
             if (navigator.share) {
-                navigator.share({ title: t.speaker + ' — Rich Transcript', text: fullText });
+                navigator.share({ title: t.speaker + ' Transcript', text: body });
             } else {
-                navigator.clipboard.writeText(fullText).then(() => openModal("Copied", "Rich text transcript copied to clipboard.", () => {}));
+                navigator.clipboard.writeText(body).then(() => openModal("Copied", "Transcript copied to clipboard.", () => {}));
             }
         }
 
