--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Meeting Tools v2.10.3</title>
+    <title>Meeting Tools v2.10.4</title>
     <link rel="manifest" href="manifest.json">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
@@ -79,7 +79,7 @@
         .footer-btn { flex: 1; padding: 20px; border-radius: 15px; font-size: 22px; font-weight: 700; border: none; background: var(--accent); color: white; cursor: pointer; }
         .secondary-btn { background: #E5E5EA; color: #000; border: 1px solid var(--border); }
 
-        .credit-footer { text-align: center; padding: 25px 20px; border-top: 1px solid var(--border); flex-shrink: 0; background: var(--card); display: flex; flex-direction: column; align-items: center; justify-content: center; width: 100%; box-sizing: border-box; }
+        .credit-footer { text-align: center; padding: 25px 20px; border-top: 1px solid var(--border); flex-shrink: 0; background: var(--card); display: flex; flex-direction: column; align-items: center; justify-content: center; width: 100%; box-sizing: border-box; margin-top: auto; }
         .resource-row { display: flex; gap: 12px; margin-bottom: 15px; width: 100%; max-width: 500px; justify-content: center; }
         .res-btn { flex: 1; background: #F2F2F7; color: var(--accent); text-decoration: none; padding: 12px; border-radius: 10px; font-weight: 700; font-size: 16px; border: 1px solid var(--border); }
         .version-tag { display: block; font-size: 12px; opacity: 0.5; margin-top: 6px; }
@@ -250,7 +250,7 @@
         </div>
     </div>
 
-    <!-- ===================== TRANSCRIPT LIST SCREEN (NEW v2.10.3) ===================== -->
+    <!-- ===================== TRANSCRIPT LIST SCREEN (NEW v2.10.4) ===================== -->
     <div id="transcriptList" class="screen">
         <div class="header"><h1>Transcripts</h1><div class="subtitle">Saved this meeting</div></div>
         <div class="container">
@@ -259,7 +259,7 @@
         <div class="button-row"><button class="footer-btn secondary-btn" onclick="showScreen('menu')">Back</button></div>
     </div>
 
-    <!-- ===================== TRANSCRIPT VIEW SCREEN (NEW v2.10.3) ===================== -->
+    <!-- ===================== TRANSCRIPT VIEW SCREEN (NEW v2.10.4) ===================== -->
     <div id="transcriptView" class="screen">
         <div class="header">
             <h1 id="transcriptViewName">Name</h1>
@@ -300,7 +300,7 @@
             document.getElementById('mdToggle').checked = (mdSaved === 'true');
             document.getElementById('openaiKey').value = localStorage.getItem(KEY_AI_KEY) || "";
             const vLabel = document.getElementById('versionLabel');
-            vLabel.innerText = "Version 2.10.3" + (window.location.pathname.toLowerCase().includes('/test/') ? " (TEST)" : "");
+            vLabel.innerText = "Version 2.10.4" + (window.location.pathname.toLowerCase().includes('/test/') ? " (TEST)" : "");
             refreshRoster();
             nextWod();
         }
@@ -665,7 +665,7 @@
         }
 
         /* ============================================================
-           NEW: TRANSCRIPT LIST & VIEW FUNCTIONS (v2.10.3)
+           NEW: TRANSCRIPT LIST & VIEW FUNCTIONS (v2.10.4)
         ============================================================ */
 
         let activeTranscriptIndex = -1;
