--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Meeting Tools v2.10.4</title>
+    <title>Meeting Tools v2.10.5</title>
     <link rel="manifest" href="manifest.json">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
@@ -135,12 +135,12 @@
             <div id="tabCounter" class="tab" onclick="switchMode('counter')">Ah-Counter</div>
         </div>
         
-        <div id="timerMode" class="container">
+        <div id="timerMode" class="container" style="flex: 0 0 auto;">
             <div class="main-menu-card" onclick="showScreen('setup')"><div class="card-content"><h3>New Timer</h3><p>Select speaker & start</p></div><div class="icon">⊕</div></div>
             <div class="main-menu-card" onclick="showScreen('report')"><div class="card-content"><h3>Meeting Report</h3><p>View recorded times</p></div><div class="icon">☰</div></div>
         </div>
 
-        <div id="counterMode" class="container" style="display:none;">
+        <div id="counterMode" class="container" style="display:none; flex: 0 0 auto;">
             <div class="main-menu-card" onclick="showScreen('wod')"><div class="card-content"><h3 style="color:var(--gold);">Word of the Day</h3><p>AI Definition & Search</p></div><div class="icon" style="color:var(--gold);">★</div></div>
             <div class="main-menu-card" onclick="showScreen('setup')"><div class="card-content"><h3>Start Tracking</h3><p>Count filler words</p></div><div class="icon">✍</div></div>
             <div class="main-menu-card" onclick="showScreen('transcriptList')"><div class="card-content"><h3>Transcripts</h3><p>Share with speakers</p></div><div class="icon">📋</div></div>
@@ -250,7 +250,7 @@
         </div>
     </div>
 
-    <!-- ===================== TRANSCRIPT LIST SCREEN (NEW v2.10.4) ===================== -->
+    <!-- ===================== TRANSCRIPT LIST SCREEN (NEW v2.10.5) ===================== -->
     <div id="transcriptList" class="screen">
         <div class="header"><h1>Transcripts</h1><div class="subtitle">Saved this meeting</div></div>
         <div class="container">
@@ -259,7 +259,7 @@
         <div class="button-row"><button class="footer-btn secondary-btn" onclick="showScreen('menu')">Back</button></div>
     </div>
 
-    <!-- ===================== TRANSCRIPT VIEW SCREEN (NEW v2.10.4) ===================== -->
+    <!-- ===================== TRANSCRIPT VIEW SCREEN (NEW v2.10.5) ===================== -->
     <div id="transcriptView" class="screen">
         <div class="header">
             <h1 id="transcriptViewName">Name</h1>
@@ -300,7 +300,7 @@
             document.getElementById('mdToggle').checked = (mdSaved === 'true');
             document.getElementById('openaiKey').value = localStorage.getItem(KEY_AI_KEY) || "";
             const vLabel = document.getElementById('versionLabel');
-            vLabel.innerText = "Version 2.10.4" + (window.location.pathname.toLowerCase().includes('/test/') ? " (TEST)" : "");
+            vLabel.innerText = "Version 2.10.5" + (window.location.pathname.toLowerCase().includes('/test/') ? " (TEST)" : "");
             refreshRoster();
             nextWod();
         }
@@ -419,7 +419,7 @@
         function askClearLogs() { openModal("Clear?", "Reset logs, WOD, and transcripts?", () => { localStorage.removeItem(KEY_LOGS); localStorage.removeItem(KEY_WOD_FULL); localStorage.removeItem(KEY_TRANSCRIPTS); location.reload(); }); }
         function openModal(t, b, c) { document.getElementById('modalTitle').innerText = t; document.getElementById('modalBody').innerHTML = b; document.getElementById('customModal').style.display = 'flex'; document.getElementById('modalConfirm').onclick = () => { c(); document.getElementById('customModal').style.display = 'none'; }; document.getElementById('modalCancel').onclick = () => { document.getElementById('customModal').style.display = 'none'; }; }
         function askCustomTime(el) { const saved = JSON.parse(localStorage.getItem(KEY_CUSTOM) || '{"g":5,"cy":6,"r":7}'); const title = currentMode === 'timer' ? "Thresholds" : "Enter Custom Role"; const body = currentMode === 'timer' ? `<label>Green (Min):</label><input type="number" id="cg" value="${saved.g}"><label>Yellow (Target):</label><input type="number" id="cy" value="${saved.cy}"><label>Red (Max):</label><input type="number" id="cr" value="${saved.r}">` : `<label>Role Name:</label><input type="text" id="customRole" placeholder="e.g. JOKE MASTER" style="text-transform:uppercase">`; openModal(title, body, () => { if (currentMode === 'timer') { const g = document.getElementById('cg').value, y = document.getElementById('cy').value, r = document.getElementById('cr').value; lims = { g: g*60, y: y*60, r: r*60 }; localStorage.setItem(KEY_CUSTOM, JSON.stringify({g, cy: y, r})); document.getElementById('customLabel').innerText = `${g}-${r}m`; selectedTypeLabel = "CUSTOM"; } else { selectedTypeLabel = document.getElementById('customRole').value.toUpperCase(); document.getElementById('customLabel').innerText = selectedTypeLabel; } document.querySelectorAll('.role-card').forEach(c => c.classList.remove('selected')); el.classList.add('selected'); }); }
-        function switchMode(m) { currentMode = m; document.querySelectorAll('.tab').forEach(t => t.classList.remove('active')); document.getElementById(m === 'timer' ? 'tabTimer' : 'tabCounter').classList.add('active'); document.getElementById('modeTitle').innerText = m === 'timer' ? 'Meeting Timer' : 'Ah-Counter'; document.getElementById('timerMode').style.display = m === 'timer' ? 'flex' : 'none'; document.getElementById('counterMode').style.display = m === 'counter' ? 'flex' : 'none'; }
+        function switchMode(m) { currentMode = m; document.querySelectorAll('.tab').forEach(t => t.classList.remove('active')); document.getElementById(m === 'timer' ? 'tabTimer' : 'tabCounter').classList.add('active'); document.getElementById('modeTitle').innerText = m === 'timer' ? 'Meeting Timer' : 'Ah-Counter'; const tm = document.getElementById('timerMode'); const cm = document.getElementById('counterMode'); tm.style.display = m === 'timer' ? 'block' : 'none'; cm.style.display = m === 'counter' ? 'block' : 'none'; }
 
         /* --- START HANDLER (modified to route to transcription if toggle is on) --- */
         function handleStart() {
@@ -665,7 +665,7 @@
         }
 
         /* ============================================================
-           NEW: TRANSCRIPT LIST & VIEW FUNCTIONS (v2.10.4)
+           NEW: TRANSCRIPT LIST & VIEW FUNCTIONS (v2.10.5)
         ============================================================ */
 
         let activeTranscriptIndex = -1;
